# NeonCore-Atlas

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: platform-placeholders.yml  rust.yml
apps/android/: README.md  settings.gradle.kts
apps/android/app/: build.gradle.kts
apps/android/app/src/main/: AndroidManifest.xml
apps/android/app/src/main/java/dev/neoncore/app/: MainActivity.kt  NeonCoreVpnService.kt
apps/android/app/src/main/java/dev/neoncore/atlas/: AtlasVpnService.kt  MainActivity.kt
apps/android/app/src/main/res/values/: strings.xml
apps/android/app/src/main/res/values-en-rXA/: plurals.xml  strings.xml
apps/android/app/src/main/res/values-zh-rCN/: strings.xml
apps/ios/: README.md
apps/ios/AtlasApp/: App.swift
apps/ios/NeonCoreApp/: App.swift  Localizable.xcstrings
apps/ios/NetworkExtension/: PacketTunnelProvider.swift
apps/linux/: Cargo.toml  README.md
apps/linux/i18n/: en-AU.ftl  en-XA.ftl  zh-Hans.ftl
apps/linux/src/: main.rs  tun.rs
apps/macos/: Package.swift  README.md
apps/macos/AtlasMacApp/: App.swift  Localizable.xcstrings
apps/macos/NeonCoreMacApp/: App.swift  Localizable.xcstrings
apps/macos/NetworkExtension/: PacketTunnelProvider.swift
apps/windows/: AtlasWindows.csproj  MainWindow.xaml  MainWindow.xaml.cs  NeonCoreWintunTunnel.cs  README.md  WintunTunnel.cs
apps/windows/Strings/en-AU/: Resources.resw
apps/windows/Strings/en-XA/: Resources.resw
apps/windows/Strings/zh-Hans/: Resources.resw
crates/atlas-api/: Cargo.toml
crates/atlas-api/src/: lib.rs
crates/atlas-cli/: Cargo.toml
crates/atlas-cli/locales/: en-AU.ftl  en-XA.ftl  zh-Hans.ftl
crates/atlas-cli/src/: main.rs
crates/atlas-core/: Cargo.toml
crates/atlas-core/src/: lib.rs
crates/atlas-daemon/: Cargo.toml
crates/atlas-daemon/locales/: en-AU.ftl  en-XA.ftl  zh-Hans.ftl
crates/atlas-daemon/src/: main.rs
crates/atlas-engine/: Cargo.toml
crates/atlas-engine/src/: lib.rs
crates/atlas-updater/: Cargo.toml
crates/neoncore-api/: Cargo.toml
crates/neoncore-api/src/: lib.rs
crates/neoncore-cli/: Cargo.toml
crates/neoncore-cli/locales/: en-XA.ftl  zh-Hans.ftl
crates/neoncore-cli/src/: main.rs
crates/neoncore-core/: Cargo.toml
crates/neoncore-core/src/: lib.rs
crates/neoncore-daemon/: Cargo.toml
crates/neoncore-daemon/locales/: en-AU.ftl
crates/neoncore-daemon/src/: main.rs
crates/neoncore-dns/: Cargo.toml
crates/neoncore-dns/src/: lib.rs
crates/neoncore-engine/: Cargo.toml
crates/neoncore-engine/src/: lib.rs
crates/neoncore-ip-stack/: Cargo.toml
crates/neoncore-ip-stack/src/: lib.rs
crates/neoncore-kernel/: Cargo.toml
crates/neoncore-kernel/src/: buffer_pool.rs  connection.rs  dns.rs  flow.rs  main.rs  outbound.rs  packet_session.rs  routing.rs  session.rs  tcp_tuning.rs
crates/neoncore-kernel/src/adapter/: anytls.rs  direct.rs  http.rs  hy2.rs  hysteria2.rs  mod.rs  reality.rs  shadowsocks.rs  vless.rs
crates/neoncore-kernel/src/adapter/shadowsocks/: client.rs  config.rs  direct_udp.rs  legacy.rs  obfs.rs  ssr.rs  ssr_registry.rs  tests.rs  transport.rs  uot.rs
crates/neoncore-kernel/src/adapter/shadowsocks/ssr/obfs/: tls_ticket.rs
crates/neoncore-kernel/src/adapter/shadowsocks/ssr/protocol/: auth_chain.rs  verify_sha1.rs
crates/neoncore-kernel/tests/: ssr_strict_matrix.rs
crates/neoncore-routing/: Cargo.toml
crates/neoncore-routing/src/: lib.rs
crates/neoncore-tun/: Cargo.toml
crates/neoncore-tun/src/: lib.rs
crates/neoncore-tun2proxy/: Cargo.toml
crates/neoncore-tun2proxy/src/: main.rs
crates/neoncore-updater/: Cargo.toml
crates/neoncore-updater/src/: lib.rs
docs/: architecture.md  capabilities.md  development.md  platforms.md  protocol-support.md  roadmap.md
examples/kernel/: direct-session.json  hysteria2-session.json  vless-reality-session.json  vless-tcp-session.json
examples/profiles/: basic-profile.json
examples/subscriptions/: example-subscription.txt
i18n/: README.md  glossary.md  keys.yml  locales.yml  style-guide.md
i18n/pseudo/: README.md
i18n/scripts/: check-hardcoded-strings.sh  check-missing-translations.sh  generate-pseudo-locale.py  sync-locales.py
platform/android/: README.md
platform/ios/: README.md
platform/linux/: README.md
platform/macos/: README.md
platform/windows/: README.md
scripts/dev/: README.md  run-macos.sh
scripts/release/: README.md
