[workspace]
resolver = "2"
members = [
    "crates/atlas-core",
    "crates/atlas-engine",
    "crates/atlas-api",
    "crates/atlas-daemon",
    "crates/atlas-cli",
    "crates/atlas-updater",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/neoncore/neoncore-atlas"
rust-version = "1.76"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
