[workspace]
resolver = "2"
members = [
    "crates/neoncore-core",
    "crates/neoncore-engine",
    "crates/neoncore-api",
    "crates/neoncore-daemon",
    "crates/neoncore-cli",
    "crates/neoncore-updater",
    "crates/neoncore-kernel",
    "crates/neoncore-ip-stack",
    "crates/neoncore-routing",
    "crates/neoncore-dns",
    "crates/neoncore-tun",
    "crates/neoncore-tun2proxy",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/NeonCore-AU/NeonCore-Atlas"
rust-version = "1.76"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[patch.crates-io]
hysteria2 = { path = "vendor/hysteria2" }
rustls = { path = "vendor/rustls" }
quinn-proto = { path = "vendor/quinn-proto" }
