[package]
name = "atlas-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "atlas"
path = "src/main.rs"

[dependencies]
atlas-core = { path = "../atlas-core" }
atlas-api = { path = "../atlas-api" }
clap.workspace = true
anyhow.workspace = true
