[package]
name = "atlas-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "atlas-daemon"
path = "src/main.rs"

[dependencies]
atlas-core = { path = "../atlas-core" }
atlas-engine = { path = "../atlas-engine" }
atlas-api = { path = "../atlas-api" }
clap.workspace = true
anyhow.workspace = true
serde_json.workspace = true
