[package]
name = "neoncore-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "neoncore"
path = "src/main.rs"

[dependencies]
neoncore-core = { path = "../neoncore-core" }
neoncore-api = { path = "../neoncore-api" }
clap.workspace = true
anyhow.workspace = true
