[package]
name = "neoncore-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "neoncore-daemon"
path = "src/main.rs"

[dependencies]
neoncore-core = { path = "../neoncore-core" }
neoncore-engine = { path = "../neoncore-engine" }
neoncore-api = { path = "../neoncore-api" }
clap.workspace = true
anyhow.workspace = true
serde_json.workspace = true
