[package]
name = "neoncore-tun"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
neoncore-dns = { path = "../neoncore-dns" }
neoncore-ip-stack = { path = "../neoncore-ip-stack" }
neoncore-routing = { path = "../neoncore-routing" }
serde.workspace = true
thiserror.workspace = true
