[package]
name = "neoncore-tun2proxy"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "neoncore-tun2proxy"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
env_logger = "0.11"
log = "0.4"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = "0.7"
tproxy-config = { version = "7.0.7", default-features = false }
tun2proxy = { version = "0.8.1", default-features = false }
